Fix subtext on hendelser page on mobile

--- a/www/css/events.css
+++ b/www/css/events.css
@@ -129,7 +129,7 @@ p + .subtext {
 		max-width: none;
 		width: 100%;
 	}
-	.subtext {
+	article >.subtext {
 		margin-top: -1em !important;
 	}
 }
